<resources>
    <string name="app_name">Notes</string>
    <string name="app_name_long">Nextcloud Notes</string>
    <string name="label_all_notes">All notes</string>
    <string name="label_favorites">Favorites</string>
    <string name="action_create">New note</string>
    <string name="welcome_text">Welcome to %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="action_trashbin">Deleted notes</string>
    <string name="action_search">Search</string>
    <string name="action_sorting_method">Sorting method</string>
    <string name="simple_cancel">Cancel</string>
    <string name="simple_switch">Switch</string>
    <string name="simple_edit">Edit</string>
    <string name="simple_remove">Remove</string>
    <string name="action_edit_save">Save</string>
    <string name="simple_about">About</string>
    <string name="simple_link">Link</string>
    <string name="action_note_deleted">Deleted %1$s</string>
    <string name="action_note_restored">Restored %1$s</string>
    <string name="action_undo">Undo</string>
    <string name="action_uncategorized">Uncategorized</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_change_category">Category</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_preview">Preview</string>
    <string name="menu_share">Share</string>
    <string name="menu_shared_note">Shared note</string>
    <string name="common_loading">Loading…</string>
    <string name="search_in_category">Search in %1$s</string>
    <string name="search_in_all">Search all notes</string>
    <string name="change_category_title">Choose a category</string>
    <string name="users_and_groups_search_provider_authority">com.nextcloud.android.providers.UsersAndGroupsSearchProvider</string>
    <string name="users_and_groups_search_provider_share_with">com.nextcloud.android.providers.UsersAndGroupsSearchProvider.action.SHARE_WITH</string>
    <string name="note_share_activity_activity_icon_content_description">note activity icon</string>
    <string name="note_share_activity_share_icon_content_description">note share icon</string>
    <string name="note_share_activity_external_icon_content_description">note share external icon</string>
    <string name="note_share_activity_copy_icon_content_description">note share copy icon</string>
    <string name="note_share_activity_more_icon_content_description">note share more icon</string>
    <string name="note_share_activity_icon_content_description">note share icon</string>
    <string name="note_share_activity_user_icon_content_description">note share user icon</string>
    <string name="note_share_activity_contact_icon_content_description">note share contact icon</string>
    <string name="note_share_activity_shared_with_you">Shared with you by %1$s</string>
    <string name="note_share_activity_send_copy_to">Send copy to</string>
    <string name="note_share_activity_search_text">Name, Federated Cloud ID or email address…</string>
    <string name="note_share_activity_share_link">Share link</string>
    <string name="note_share_activity_resharing_not_allowed">Policy or permissions prevent resharing</string>
    <string name="note_share_activity_could_not_retrieve_url">Could not retrieve URL</string>
    <string name="note_share_activity_subject_shared_with_you">\"%1$s\" has been shared with you</string>
    <string name="note_share_activity_contact_no_permission">Contact permission is required.</string>
    <string name="note_share_activity_you_are_not_allowed_to_share">You are not allowed to create a public share.</string>
    <string name="note_share_created">Share created</string>
    <string name="note_share_activity_cannot_created">You are not allowed to create a share.</string>
    <string name="note_share_detail_activity_password_error_message">This password looks a bit weak. For better security, try using a longer password with a mix of letters, numbers, and symbols.</string>
    <string name="note_share_detail_activity_share_via_link_hide_download">Hide download</string>
    <string name="note_share_detail_activity_allow_download_and_sync">Allow download and sync</string>
    <string name="note_share_detail_activity_share_send_note">Note to recipient</string>
    <string name="note_share_detail_activity_hint_note">Note</string>
    <string name="note_share_detail_activity_common_next">Next</string>
    <string name="note_share_detail_activity_share_copy_link">Share and Copy Link</string>
    <string name="note_share_detail_activity_common_confirm">Confirm</string>
    <string name="note_share_detail_activity_set_note">Set Note</string>
    <string name="note_share_detail_activity_send_share">Send Share</string>
    <string name="note_share_detail_activity_hint_name">Name</string>
    <string name="note_share_detail_activity_link_name">Link Name</string>
    <string name="note_share_detail_activity_share_link_empty_password">You must enter a password</string>
    <string name="note_share_detail_activity_hint_password">Password</string>
    <string name="note_share_detail_activity_no_share_permission_selected">Please select at least one permission to share.</string>
    <string name="note_share_detail_activity_label_empty">Label cannot be empty</string>
    <string name="note_share_detail_activity_cancel">Cancel</string>
    <string name="note_share_detail_activity_create_share_error">Failed to create a share</string>
    <string name="share_password_dialog_fragment_share_link_optional_password_title">Enter an optional password</string>
    <string name="share_password_dialog_fragment_skip">Skip</string>
    <string name="share_link_password_title">Enter a password</string>
    <string name="common_ok">OK</string>
    <string name="common_delete">Delete</string>
    <string name="write_email">Send email</string>
    <string name="no_browser_available">No app available to handle links</string>
    <string name="no_email_app_available">No App available to handle mail address</string>
    <string name="no_actions">No actions for this user</string>
    <string name="failed_the_remove_share">Failed to remove share</string>
    <string name="email_pick_failed">Failed to pick email address.</string>
    <string name="failed_update_ui">Failed to update UI</string>
    <string name="file_detail_sharing_fragment_no_contact_app_message">No app available to select contacts</string>
    <string name="activity_chooser_title">Send link to…</string>
    <string name="activity_chooser_send_file_title">Send</string>
    <string name="share_internal_link_to_folder_text">Internal share link only works for users with access to this folder</string>
    <string name="share_internal_link_to_file_text">Internal share link only works for users with access to this file</string>
    <string name="share_internal_link">Share internal link</string>
    <string name="share_delete_link">Delete link</string>
    <string name="delete_share">Delete share</string>
    <string name="share_settings">Settings</string>
    <string name="share_send_new_email">Send new email</string>
    <string name="share_dialog_title">Sharing</string>
    <string name="share_file">Share %1$s</string>
    <string name="share_expiration_date_label">Expires %1$s</string>
    <string name="share_expiration_date_format">%1$s</string>
    <string name="share_no_expiration_date_label">Set expiration date</string>
    <string name="share_via_link_section_title">Share link</string>
    <string name="share_via_link_send_link_label">Send link</string>
    <string name="share_password_title">Password-protected</string>
    <string name="share_no_password_title">Set password</string>
    <string name="share_with_title">Share with…</string>
    <string name="share_via_link_unset_password">Unset</string>
    <string name="add_another_public_share_link">Add another link</string>
    <string name="add_new_public_share">Add new public share link</string>
    <string name="public_share_name">New name</string>
    <string name="share_link_with_label">Share link (%1$s)</string>
    <string name="share_link">Share link</string>
    <string name="allow_resharing">Allow resharing</string>
    <string name="link_share_view_only">View only</string>
    <string name="link_share_editing">Editing</string>
    <string name="link_share_allow_upload_and_editing">Allow upload and editing</string>
    <string name="link_share_file_drop">File drop (upload only)</string>
    <string name="could_not_retrieve_shares">Could not retrieve shares</string>
    <string name="share_permission_view_only">View only</string>
    <string name="share_permission_unknown">Unknown</string>
    <string name="share_permission_file_request">File request</string>
    <string name="share_permission_can_edit">Can edit</string>
    <string name="share_permission_file_drop">File drop</string>
    <string name="share_permission_secure_file_drop">Secure file drop</string>
    <string name="share_permissions">Share Permissions</string>
    <plurals name="share_download_limit_description">
        <item quantity="one">%1$d download remaining</item>
        <item quantity="other">%1$d downloads remaining</item>
    </plurals>
    <string name="about_version_title">Version</string>
    <string name="about_version">You are currently using %1$s</string>
    <string name="about_maintainer_title">Maintainer</string>
    <string name="about_maintainer" translatable="false">Nextcloud</string>
    <string name="about_developers_title">Developers</string>
    <string name="about_developers" translatable="false">%1$s, Kristof Hamann, HeaDBanGer84, Felix Edelmann, Daniel Bailey</string>
    <string name="about_translators_title">Translators</string>
    <string name="about_translators_transifex">Nextcloud community on %1$s</string>
    <string name="about_testers_title">Testers</string>
    <string name="about_testers" translatable="false">Jan C. Borchardt</string>
    <string name="about_source_title">Source code</string>
    <string name="about_source">This project is hosted on GitHub: %1$s</string>
    <string name="about_issues_title">Issues</string>
    <string name="about_issues">You can report bugs, enhancement proposals and feature requests at the GitHub issue tracker: %1$s</string>
    <string name="about_translate_title">Translate</string>
    <string name="about_translate">Join the Nextcloud team on Transifex and help us to translate this app: %1$s</string>
    <string name="about_app_license_title">App license</string>
    <string name="about_app_license">This application is licensed under the GNU GENERAL PUBLIC LICENSE v3+.</string>
    <string name="about_app_license_button">View license</string>
    <string name="about_icons_disclaimer_title">Icons</string>
    <string name="about_icons_disclaimer_app_icon">For the original icon see %1$s.</string>
    <string name="about_icons_disclaimer_mdi_icons">All further icons used by this app are %1$s made by Google Inc. and licensed under the Apache 2.0 License.</string>
    <string name="widget_section_favorites">Favorites</string>
    <string name="widget_sort_favorites_first">Favorites on top</string>
    <string name="widget_sort_order">Sort order</string>
    <string name="widget_sort_newest_first">Newest first</string>
    <string name="widget_sort_oldest_first">Oldest first</string>
    <string name="widget_section_notes">Notes to show</string>
    <string name="widget_add">Add widget</string>
    <string name="simple_move">Move</string>
    <string name="settings_notes_path">Set folder</string>
    <string name="settings_file_suffix">File extension</string>
    <string name="placeholder_predefined_status_icon" translatable="false">📆</string>
    <string name="placeholder_predefined_status_name" translatable="false">In a meeting</string>
    <string name="placeholder_predefined_status_clear_at" translatable="false">an hour</string>
    <string name="divider" translatable="false">—</string>
</resources>