<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2016-2025 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacer_2x">

        <TextView
            android:id="@+id/about_notes_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/spacer_3x"
            android:text="@string/app_name"
            android:textSize="26sp"
            app:drawableTopCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/about_version_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_version_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_version" />

        <TextView
            android:id="@+id/about_maintainer_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_maintainer_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_maintainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_maintainer" />

        <TextView
            android:id="@+id/about_developers_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_developers_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_developers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_developers" />

        <TextView
            android:id="@+id/about_translators_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_translators_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_translators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_translators_transifex" />

        <TextView
            android:id="@+id/about_testers_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_testers_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_testers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_testers" />
    </LinearLayout>
</ScrollView>
