<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2016-2025 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacer_2x">

        <TextView
            android:id="@+id/about_source_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_source_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_source" />

        <TextView
            android:id="@+id/about_issues_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_issues_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_issues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_issues" />

        <TextView
            android:id="@+id/about_translate_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_translate_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_translate" />
    </LinearLayout>
</ScrollView>
