<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2016-2025 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacer_2x">

        <TextView
            android:id="@+id/about_app_license_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_license_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_app_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacer_1x"
            android:text="@string/about_app_license" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/about_app_license_button"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app_license_button"
            app:backgroundTint="@color/defaultBrand" />

        <TextView
            android:id="@+id/about_icons_disclaimer_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/about_icons_disclaimer_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_icons_disclaimer_app_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_icons_disclaimer_app_icon" />

        <TextView
            android:id="@+id/about_icons_disclaimer_mdi_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/spacer_1x"
            android:text="@string/about_icons_disclaimer_mdi_icons" />
    </LinearLayout>
</ScrollView>
