<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="90"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_grey600_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_move"
        android:icon="@drawable/ic_send_grey600_24dp"
        android:orderInCategory="110"
        android:title="@string/simple_move"
        app:showAsAction="ifRoom" />

</menu>