<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2021-2024 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notes_path"
        android:orderInCategory="10"
        android:title="@string/settings_notes_path"
        app:showAsAction="never" />

    <item
        android:id="@+id/file_suffix"
        android:orderInCategory="20"
        android:title="@string/settings_file_suffix"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:orderInCategory="30"
        android:title="@string/simple_remove"
        app:showAsAction="never" />

</menu>