<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/simple_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

</menu>