<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2026 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacer_2x"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/widget_section_favorites"
            android:textAppearance="?attr/textAppearanceTitleSmall" />

        <CheckBox
            android:id="@+id/favorites_first_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacer_2x"
            android:layout_marginTop="@dimen/spacer_1x"
            android:text="@string/widget_sort_favorites_first" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacer_2x"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/widget_sort_order"
            android:textAppearance="?attr/textAppearanceTitleSmall" />

        <RadioGroup
            android:id="@+id/sort_order_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacer_2x"
            android:layout_marginTop="@dimen/spacer_1x"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/sort_newest_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/widget_sort_newest_first" />

            <RadioButton
                android:id="@+id/sort_oldest_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/widget_sort_oldest_first" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacer_2x"
            android:layout_marginTop="@dimen/spacer_2x"
            android:text="@string/widget_section_notes"
            android:textAppearance="?attr/textAppearanceTitleSmall" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacer_1x"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/widget_configuration_list_padding_bottom"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_navigation" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/save_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/spacer_2x"
        android:text="@string/widget_add"
        app:icon="@drawable/ic_add_white_24dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
