<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Nextcloud Notes - Android Client
  ~
  ~ SPDX-FileCopyrightText: 2020 Andy Scherzinger <info@andy-scherzinger.de>
  ~ SPDX-FileCopyrightText: 2020 Tobias Kaminsky <tobias@kaminsky.me>
  ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp">

    <TextView
        android:id="@+id/icon"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textSize="25sp"
        tools:text="@string/placeholder_predefined_status_icon" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceListItem"
        tools:text="@string/placeholder_predefined_status_name" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacer_1x"
        android:gravity="center_vertical"
        android:text="@string/divider"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/clearAt"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="?android:attr/textColorSecondary"
        tools:text="@string/placeholder_predefined_status_clear_at" />
</LinearLayout>
