<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Nextcloud Notes - Android Client
 ~
 ~ SPDX-FileCopyrightText: 2015-2025 Nextcloud GmbH and Nextcloud contributors
 ~ SPDX-License-Identifier: GPL-3.0-or-later
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_public_share"
    android:layout_width="match_parent"
    android:layout_height="@dimen/sharee_list_item_size"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/add_new_public_share_link_icon"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/spacer_2x"
        android:layout_marginEnd="@dimen/spacer_2x"
        android:background="@drawable/round_bgnd"
        android:contentDescription="@string/note_share_activity_share_icon_content_description"
        android:padding="@dimen/spacer_1x"
        android:src="@drawable/shared_via_link" />

    <TextView
        android:id="@+id/add_new_public_share_link_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/share_via_link_section_title"
        android:textSize="@dimen/note_font_size_small" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_new_public_share_link_plus"
        style="@style/Button.IconButton"
        android:layout_width="@dimen/minimum_size_for_touchable_area"
        android:layout_height="match_parent"
        android:minHeight="@dimen/minimum_size_for_touchable_area"
        android:contentDescription="@string/add_new_public_share"
        app:cornerRadius="@dimen/iconized_single_line_item_icon_size"
        app:icon="@drawable/ic_plus"
        app:iconSize="@dimen/iconized_single_line_item_icon_size"
        app:iconTint="@color/icon_color_default" />
</LinearLayout>
